--- a/ESTILOS/styles.css
+++ b/ESTILOS/styles.css
@@ -282,7 +282,7 @@ nav a:hover {
   .Banner_SN li img {
   float: left;
   margin: 5px 5px;
-  margin-right: 5px;
+  margin-right: 12px;
   }
   .Banner_SN li p {
   padding-top: 5px;
@@ -293,6 +293,8 @@ nav a:hover {
   .Banner_SN li p a {
   text-decoration: none;
   color: darkblue;
+  font-family: "Neuton", serif;
+  font-style: normal;
   }
 
 /* Sección Servicios */
