--- a/ESTILOS/styles.css
+++ b/ESTILOS/styles.css
@@ -295,6 +295,7 @@ nav a:hover {
   color: darkblue;
   font-family: "Neuton", serif;
   font-style: normal;
+  font-weight: bold;
   }
 
 /* Sección Servicios */
