--- a/ESTILOS/styles.css
+++ b/ESTILOS/styles.css
@@ -289,6 +289,8 @@ nav a:hover {
   margin: 0;
   line-height: 16px;
   font-size: 10px;
+  background-color: white;
+  border-radious: 12px;
   }
   .Banner_SN li p a {
   text-decoration: none;
