--- a/ESTILOS/styles.css
+++ b/ESTILOS/styles.css
@@ -275,7 +275,7 @@ nav a:hover {
   margin: 0;
   transition: all 0.25s ease-in-out;
   cursor: pointer;
-  background-color: white;
+  background-color: #0b3dad;
   border-radius: 12px;
   }
   .Banner_SN li:hover {
